@@ -20,20 +20,23 @@ void getParameters();
 double timeStep;
 bool visible;
 int randomSeed,nsteps;
-string initialDate,finalDate;
-string populationGridFile;
-string agentFactoryType;
-string parameterFile,summaryFileName;
-string infectionMapFileName,populationMapFileName,inputFileName,restartFileName;
+std::string initialDate,finalDate;
+std::string populationGridFile;
+std::string agentFactoryType;
+std::string parameterFile,summaryFileName;
+std::string infectionMapFileName,populationMapFileName,inputFileName,restartFileName;
+std::string experimentOutputDirectory,experimentName,experimentDescription,runNumber;
 int numberOfAgents;
 double agentFraction;
 int NxCells,NyCells,restartInterval,outputInterval;
 double xSize,ySize,x0,y0;
 bool isRestart;
 double latencyTime,recoveryTime,infectionRate,infectionDist;
+void setRunNumber(std::string n){runNumber=n;}
 protected:
 parameters();
 parameters(string);
 static parameters* instance;
+
 };
 #endif
